--- a/1.html
+++ b/1.html
@@ -7,22 +7,62 @@
 <body>
 
 <h1><a href="index.html">NCT</a></h1>
-
-<ol>
+<oi>
   <li><a href="1.html">NCT란</a></li>
   <li><a href="2.html">NCT 유닛</a></li>
   <li><a href="3.html">NCT 멤버</a></li>
-</ol>
+</oi>
 
 <h2><u>NCT</u>란 : </h2>
 
 <strong>NCT </strong>NCT는 <a href="https://ko.wikipedia.org/wiki/SM_%EC%97%94%ED%84%B0%ED%85%8C%EC%9D%B8%EB%A8%BC%ED%8A%B8" target="_blank" title="SM ENTERTAINMENT INFO">SM 엔터테인먼트</a>에 소속된 다인조 보이그룹이다. 2018년에 NCT에 합류한 멤버들은 18명, 2019 현재 멤버 수는 21명이다.
-<p>SM Rookies를 통해 처음으로 선보인 보이그룹이기도 하다. NCT의 일부 멤버들은 SM Rookies를 통해 루키즈의 여자 멤버들과 함께 공개되기도 했다. 인터넷 방송에서는 2016년 4월 8일에 NCT U로 처음 공개되었고, 음악 방송에서는 2016년 4월 15일에 KBS2 뮤직뱅크에서 데뷔했다. 2016년 7월에는 서울팀 NCT 127이 데뷔했고 2016년 8월에는 청소년연합팀 NCT DREAM이 데뷔했다. 2018년 4월 20일에는 완전체로 데뷔했다.
+<p>
+  SM Rookies를 통해 처음으로 선보인 보이그룹이기도 하다. NCT의 일부 멤버들은 SM Rookies를 통해 루키즈의 여자 멤버들과 함께 공개되기도 했다. 인터넷 방송에서는 2016년 4월 8일에 NCT U로 처음 공개되었고, 음악 방송에서는 2016년 4월 15일에 KBS2 뮤직뱅크에서 데뷔했다. 2016년 7월에는 서울팀 NCT 127이 데뷔했고 2016년 8월에는 청소년연합팀 NCT DREAM이 데뷔했다. 2018년 4월 20일에는 완전체로 데뷔했다.
 NCT는 SM엔터테인먼트가 만든 2016년의 신기술인 "네오 컬쳐 테크놀로지 (Neo Culture Technology·新문화기술)"의 약자이자 그룹의 이름이다.
 </p>
 <p style="margin-top:45px;">NCT는 EDM 레이블 ScreaM, SM STATION과 함께 2016년부터 처음 시도한 SM의 대표적인 시스템이다.
 T의 주요 포인트는 개방성과 확장성이다. 미래에도 NCT의 인원이 더 증가하게 될 것이며, TO THE WORLD라는 인사처럼 세계를 향해 뻗어나가, 지금보다 더 적극적으로 세계 각지에서 한류의 현지화를 지향하게 될 것으로 보인다.
- NCT라는 브랜드 아래, 전세계 각 도시에서 기본적으로 활동하는 팀이 순차적으로 데뷔할 예정이다. 전세계를 무대로 활동하는 NCT의 모든 유닛을 통칭하는 NCT U를 통해 멤버들의 다양한 조합과 변신을 지속적으로 선보일 계획이다.</p><img src="neo.jpg" width="40%">
+ NCT라는 브랜드 아래, 전세계 각 도시에서 기본적으로 활동하는 팀이 순차적으로 데뷔할 예정이다. 전세계를 무대로 활동하는 NCT의 모든 유닛을 통칭하는 NCT U를 통해 멤버들의 다양한 조합과 변신을 지속적으로 선보일 계획이다.
+</p><img src="neo.jpg" width="40%">
+<p>
+
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://firstwebimade.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+
+
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5cf42da0b534676f32ad04f0/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 
 </body>
