--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta charset="utf-8">
 </head>
 <body>
+
+
+
+
+
 <h3> 작성자 이자영 html 배우는 중<h3>
 <h1><a href="index.html">NCT</a></h1>
 
@@ -52,5 +57,48 @@ NCT 127은 엠넷 아시안 뮤직 어워드, 골든 디스크 어워드, 서울
 2018년 4월 20일 뮤직뱅크 출근길
 2018년 1월 31일 NCT Year book EP.1가 공개 되었다. 이어북에서 NCT DREAM 재민과 SM Rookies 정우, 루카스, 쿤이 공개 되었다. 2018년 2월 2일 NCT Year book EP.2가 공개 되었다. 위와 같이 다른 스타일로 NCT DREAM 재민과 SM Rookies 정우, 루카스, 쿤이 공개 되었다. 2018년 2월 6일 NCT 2018 완전체 18명으로 3월 컴백을 확정 지었다. 2018년 2월 19일 NCT U 선공개곡 BOSS 뮤직비디오를 공개 하였다. 멤버는 태용, 도영, 재현, 윈윈, 루카스, 정우, 마크 이렇게 7명이다. 2018년 2월 27일 NCT U 선공개곡 Baby Don't Stop 뮤직비디오를 공개 하였다. 멤버는 태용, 텐 이렇게 2명이다. 2018년 3월 5일 NCT DREAM 선공개곡 GO 뮤비를 공개 하였다. 멤버는 건강상 이유로 휴식기를 가졌던 재민이까지 함께 기존 7명에서 활동한다. 2018년 3월 14일 NCT 2018 EMPATHY로 완전체 컴백을 하였다. 그 중 NCT 127 TOUCH 뮤직비디오를 공개 하였다. 2018년 4월 1일 NCT U YESTODAY 뮤직비디오를 공개 하였다. 멤버는 태용, 도영, 마크, 루카스 이렇게 4명이다. 2018년 4월 19일 NCT 2018 완전체 Black on Black 뮤직비디오를 공개 하였다. 2018년 4월 20일 뮤직뱅크를 시작으로 완전체 무대를 하였다. 2018년 4월 26일 엠카운트다운을 끝으로 완전체 앨범 NCT 2018 EMPATHY 활동을 마무리 하였다. 2018년 9월 3일 NCT DREAM 미니 2집 《WE GO UP》으로 컴백했다. 멤버 마크의 마지막 DREAM 앨범이다. 앨범 나오기 전 8월 31일 《뮤직뱅크》를 통해 컴백을 하였다. 2018년 10월 12일 NCT 127 정규 1집 《NCT #127 Regular-Irregular》으로 컴백을 앞두고 있으며, 멤버 정우가 새롭게 합류하여 기존의 9인체제에서 10인체제로 개편하였다. 2018년 10월 26일 뮤직뱅크에서 아이유를 꺾고 공중파 첫 1위를 차지했다. 데뷔한지 842일만에 이루어낸 성과이다. 공중파 1위로는 NCT 서브유닛 중 최초의 기록이다.
 </p>
+<p>
+<h2> NCT 최근 동영상 superhuman.mv </h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/x95oZNxW5Rc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+<p>
+
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://firstwebimade.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5cf42da0b534676f32ad04f0/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
+
 </body>
 </html>
