--- a/2.html
+++ b/2.html
@@ -3,6 +3,16 @@
 <head>
 <title>NCT - Neo Culture Technology 2</title>
 <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141196023-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141196023-1');
+</script>
+
 </head>
 <body>
 
